add signup, get_allergy api
